--- a/readme
+++ b/readme
@@ -1,1 +1,3 @@
-
+This is a conversion of Pendragon 5.2 character sheet. I added notes for bonuses, Standings and skills. 
+Changed the weapons section.
+I left the woman tab with the original skills and associated details.
